[gd_scene load_steps=3 format=3 uid="uid://cv13yp6kp1jwy"]

[ext_resource type="Script" path="res://scenes/pickups/pickup.gd" id="1_utw5m"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6o36s"]
radius = 0.672208

[node name="Pickup" type="Node3D"]
script = ExtResource("1_utw5m")

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.862665, 0)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.862665, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_6o36s")

[connection signal="timeout" from="RespawnTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
